--- a/2018/10/housing-guide/style.css
+++ b/2018/10/housing-guide/style.css
@@ -10,12 +10,25 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 70px;
-  color: #FFF;
+  font-size: 100px;
+  margin-top: -10px;
+  padding-bottom: 20px;
+  border-bottom: 2px solid rgb(69,89,50);
+  color: rgb(69,89,50);
+  text-transform: uppercase;
 }
 
 h2 {
   font-weight: 600;
+}
+
+h3 {
+  display: inline-block;
+  color: rgb(69,89,50);
+}
+
+hr {
+  border-top: 2px solid rgb(69,89,50);
 }
 
 .navbar {
@@ -28,12 +41,26 @@ h2 {
 .title-section {
   height: 100vh;
   display: flex;
-  align-items: center;
-  text-align: center;
-  background-image: url('https://snworksceo.imgix.net/dpn/854b0599-a28f-42be-bbea-64149c69c585.sized-1000x1000.jpg');
+  align-items: flex-start;
+  text-align: right;
+  background-image: url('https://s3.amazonaws.com/snwceomedia/dpn/85e88f36-6b1b-4ebb-a269-93b709751011.original.png');
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center center;
+  background-position: left bottom;
+}
+
+.title-text {
+  width: 100%;
+  margin-top: 100px;
+  margin-right: 40px;
+  padding: 20px;
+}
+
+.title-section hr {
+  display: inline-block;
+  width: calc(100% - 80px);
+  margin-bottom: 0;
+  float: left;
 }
 
 .description {
@@ -129,6 +156,22 @@ h2 {
   height: 100%;
 }
 
+.juxtapose-container {
+  position: relative;
+  padding-bottom: 73%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.juxtapose-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .slick-arrow {
   width: 40px;
   height: 40px;
@@ -190,6 +233,10 @@ h2 {
 }
 
 @media only screen and (max-width: 992px) {
+  h1 {
+    font-size: 70px;
+  }
+
   .half {
     display: flex;
     align-items: flex-start;
@@ -201,6 +248,14 @@ h2 {
 }
 
 @media only screen and (max-width: 768px) {
+  h1 {
+    font-size: 50px;
+  }
+
+  .top-image {
+    margin-bottom: 10px;
+  }
+
   .articles {
     margin-bottom: 50px;
   }
@@ -258,5 +313,23 @@ h2 {
 
   .slick-next {
     right: -25px;
+  }
+
+  .juxtapose-container {
+    margin-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  h1 {
+    margin-top: -20px;
+    font-size: 54px;
+    border: none;
+  }
+
+  .title-text {
+    margin-top: -10px;
+    margin-right: 0;
+    padding: 20px;
   }
 }
