--- a/2018/10/housing-guide/style.css
+++ b/2018/10/housing-guide/style.css
@@ -157,6 +157,21 @@ footer {
   align-self: flex-start;
 }
 
+.street-photo {
+  width: 100%;
+  height: 500px;
+  background-size: cover;
+  background-position: center center;
+}
+
+.street-housing {
+  background-image: url('https://snworksceo.imgix.net/dpn-34s/dd1dfb6c-0a52-4a0a-9fc7-bb0e34ff01e2.sized-1000x1000.JPG');
+}
+
+.street-roommates {
+  background-image: url('https://snworksceo.imgix.net/dpn-34s/fc85ebe2-8824-447b-9863-c32eede7e060.sized-1000x1000.jpg');
+}
+
 .video-title {
   margin-bottom: 40px;
   text-align: center;
@@ -271,6 +286,10 @@ footer {
   .featured-container {
     padding: 100px 50px;
   }
+
+  .street-photo {
+    height: 300px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -322,6 +341,10 @@ footer {
     margin-bottom: 20px;
   }
 
+  .street-photo {
+    height: 450px;
+  }
+
   .video-gallery {
     padding-left: 30px;
     padding-right: 30px;
@@ -360,5 +383,9 @@ footer {
     margin-top: -10px;
     margin-right: 0;
     padding: 20px;
+  }
+
+  .street-photo {
+    height: 300px;
   }
 }
