--- a/2018/10/housing-guide/college-houses/style.css
+++ b/2018/10/housing-guide/college-houses/style.css
@@ -24,7 +24,9 @@ h2 {
 }
 
 section {
-  margin: 100px auto;
+  padding-bottom: 100px;
+  padding-top: 100px;
+  margin: auto;
 }
 
 .navbar {
@@ -78,16 +80,16 @@ section {
   display: none;
 }
 
-/* .num-students {
-  font-size: 20px;
-  font-weight: 600;
-} */
 
 .divider {
   width: -webkit-fill-available;
   height: 1px;
   background: black;
   margin: 10px;
+}
+
+.hide-lg {
+  display: none;
 }
 
 .thistle {
@@ -99,7 +101,7 @@ section {
 }
 
 .sand {
-  /* background-color: rgb(228,222,213) */
+  background-color: rgb(228,222,213)
 }
 
 .chartreuse {
@@ -163,3 +165,9 @@ section {
     display: block;
   }
 }
+@media only screen and (max-width: 576px) {
+  .hide-lg {
+    display: inline;
+  }
+}
+
