--- a/2018/10/housing-guide/college-houses/style.css
+++ b/2018/10/housing-guide/college-houses/style.css
@@ -80,7 +80,6 @@ section {
   display: none;
 }
 
-
 .divider {
   width: -webkit-fill-available;
   height: 1px;
@@ -150,7 +149,7 @@ section {
 
 @media screen and (max-width: 767px) {
   section {
-    padding: 0 15px;
+    padding: 40px 15px;
   }
 
   .intro {
@@ -161,13 +160,17 @@ section {
     height: auto;
   }
 
+  .pic {
+    padding: 0;
+  }
+
   .house-image {
     display: block;
   }
 }
+
 @media only screen and (max-width: 576px) {
   .hide-lg {
     display: inline;
   }
 }
-
