--- a/2018/10/housing-guide/style.css
+++ b/2018/10/housing-guide/style.css
@@ -184,8 +184,8 @@ footer {
   background-image: url('https://snworksceo.imgix.net/dpn-34s/dd1dfb6c-0a52-4a0a-9fc7-bb0e34ff01e2.sized-1000x1000.JPG');
 }
 
-.street-roommates {
-  background-image: url('https://snworksceo.imgix.net/dpn-34s/fc85ebe2-8824-447b-9863-c32eede7e060.sized-1000x1000.jpg');
+.street-art {
+  background-image: url('https://snworksceo.imgix.net/dpn-34s/cf3afd90-fdb0-49a4-bdb7-7f5c9636f488.sized-1000x1000.PNG');
 }
 
 .video-title {
