reorganize, update some placeholders

--- a/2018/10/voters-guide/style.css
+++ b/2018/10/voters-guide/style.css
@@ -32,66 +32,17 @@ img {
   margin-bottom: 100px;
 }
 
-.map-container {
-  width: 100%;
-  height: 100vh;
-}
-
-.inputs {
-  position: absolute;
-  top: 0;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-}
-
-.address-field {
-  padding: 6px 12px;
-  font-size: 14px;
-  color: #555;
-  background-color: #FFF;
-  border: 1px solid #CCC;
-  border-radius: 4px;
-  margin-bottom: 5px;
-}
-
-.poll-button {
-  padding: 6px 12px;
-  font-size: 14px;
-  color: #AA1E22;
-  background-color: #FFF;
-  border: 1px solid #999;
-  border-radius: 4px;
-  cursor: pointer;
-  text-align: left;
-}
-
-.mapboxgl-popup-content {
-  padding: 10px;
-}
-
-.marker {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background-color: #AA1E22;
-  /* background-image: url(); TODO: get sprites for these */
-  background-size: cover;
-  cursor: pointer;
-}
-
-.poll {
-  background-color: #8FD7F2;
-  /* background-image: url(); TODO: get sprites for these */
-}
-
 .row {
   margin-top: 10px;
 }
 
+.title-section {
+  display: flex;
+  justify-content: center;
+}
+
 .table-contents {
   text-align: center;
-  /* this style is for the table of contents */
 }
 
 .table-contents:not(:last-of-type) {
@@ -99,9 +50,9 @@ img {
 }
 
 .full-description {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  margin: auto;
 }
 
 @media only screen and (max-width: 768px) {
