--- a/2018/10/voters-guide/style.css
+++ b/2018/10/voters-guide/style.css
@@ -59,6 +59,22 @@ a:hover, a:hover h4 {
   margin-bottom: 20px;
 }
 
+.ad-container hr {
+  border-top: 1px solid rgba(0,0,0,.1);
+}
+
+.ad-container {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.ad {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0;
+  padding: 0;
+}
+
 .navbar {
   display: flex;
   justify-content: center;
