clean up article boxes

--- a/2018/10/housing-guide/college-houses/style.css
+++ b/2018/10/housing-guide/college-houses/style.css
@@ -96,23 +96,23 @@ section {
 }
 
 .olive {
-  background-color: rgb(132,129,65)
+  background-color: rgb(132,129,65);
 }
 
 .sand {
-  background-color: rgb(228,222,213)
+  background-color: rgb(228,222,213);
 }
 
 .chartreuse {
-  background-color: rgb(223,221,80)
+  background-color: rgb(223,221,80);
 }
 
 .cactus {
-  background-color: rgb(69,89,50)
+  background-color: rgb(69,89,50);
 }
 
 .mint {
-  background-color: rgb(191,206,182)
+  background-color: rgb(191,206,182);
 }
 
 .dubois {
