--- a/2018/11/basketball-preview/style.css
+++ b/2018/11/basketball-preview/style.css
@@ -1,3 +1,5 @@
+@import url("https://use.typekit.net/fil7gyr.css");
+
 header h1 {
   text-align: center;
   padding-top: 20px;
@@ -50,6 +52,44 @@ a:hover h5 {
   text-align: center;
 }
 
+h1, .icon, h3 {
+  font-family: ff-good-web-pro, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.icon {
+  color: white;
+  height: 50px;
+  width: 50px;
+  font-size: 28px;
+  margin: auto;
+  text-align: center;
+  padding-top: 5px;
+  margin-bottom: 40px;
+}
+
+.mens {
+  background-color: blue;
+}
+
+.womens {
+  background-color: red;
+}
+
+.overlapped {
+  position: absolute;
+  top: -25px;
+}
+
+.mens.overlapped {
+  left: 10px;
+}
+
+.womens.overlapped {
+  right: 10px;
+}
+
 .standings-img {
   background-color: #c9ddff;
 }
@@ -72,6 +112,12 @@ a:hover h5 {
 
 .standings .col-6 {
  padding-top: 10px;
+}
+
+.media-poll {
+  background-color: rgb(88, 176, 230);
+  color: white;
+  padding: 15px;
 }
 
 .article-title {
@@ -115,12 +161,15 @@ a:hover h5 {
 }
 
 .table-of-contents {
-  background-color: rgb(228,243,249);
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   height: 100vh;
   position: fixed;
+}
+
+.sky-blue {
+  background-color: rgb(228,243,249);
 }
 
 .toc-item h4 {
@@ -136,6 +185,12 @@ a:hover h5 {
   display: inline-block;
   border-radius: 50%;
   padding-top: 5px;
+}
+
+@media screen and (max-width: 768px) {
+    .table-of-contents {
+      display: none;
+    }
 }
 
 @media screen and (max-width: 576px) {
